# dj-notebook

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  Releasing.md  contributing.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: contributing.yml  publish.yml  python-ci.yml  python-publish.yml
docs/: PYCHARM.md  _config.yml  _toc.yml  activation.md  changelog.md  contributing.md  externalwebarticle.txt  index.md  installation.md  intro.md  pycharm.md  releasing.md  requirements.txt  usage.ipynb
docs/reference/: index.md  plus.md
src/dj_notebook/: __init__.py  config_helper.py  shell_plus.py
src/dj_notebook/management/commands/: shell_plus.py
src/dj_notebook/utilities/: dj_notebook_utils.py
tests/: config_debug_false.py  config_test_harness.py  env.django_settings_module  fake_manage_alias_environ.py  fake_manage_fully_qualified.py  fake_manage_import_environ.py  fake_other_environ_and_real_environ_setdefault.py  fake_other_environ_setdefault.py  sample.csv  test_config_helper.py  test_dj_notebook.py
tests/django_test_project/: data.sqlite3  example_fk.ipynb  example_long_form.ipynb  example_mermaid.ipynb  example_print.ipynb  example_short_form.ipynb  manage.py
tests/django_test_project/book_outlet/: admin.py  apps.py  models.py  urls.py  views.py
tests/django_test_project/book_outlet/migrations/: 0001_initial.py  0002_book_author_book_is_bestselling_alter_book_rating.py  0003_book_slug.py  0004_author_alter_book_slug_alter_book_author.py  0005_alter_book_author.py  0006_address_author_address.py  0007_country_alter_address_options_and_more.py
tests/django_test_project/book_outlet/templates/book_outlet/: base.html  book_detail.html  index.html
tests/django_test_project/book_store/: asgi.py  settings.py  urls.py  wsgi.py
tests/django_test_project/notebooks/: .dj-notebook  trial.ipynb
utils/: update_changelog.py
